--- a/msf_updates/slam_sensor_fix.yaml
+++ b/msf_updates/slam_sensor_fix.yaml
@@ -34,6 +34,6 @@
  
 /msf_viconpos_sensor/pose_sensor/pose_absolute_measurements: true
 /msf_viconpos_sensor/pose_sensor/pose_use_fixed_covariance: true
-/msf_viconpos_sensor/pose_sensor/pose_measurement_world_sensor: true  # selects if sensor measures its position w.r.t. world (true, e.g. Vicon) or the position of the world coordinate system w.r.t. the sensor (false, e.g. ethzasl_ptam
+/msf_viconpos_sensor/pose_sensor/pose_measurement_world_sensor: false  # selects if sensor measures its position w.r.t. world (true, e.g. Vicon) or the position of the world coordinate system w.r.t. the sensor (false, e.g. ethzasl_ptam
 
 /msf_viconpos_sensor/pose_sensor/pose_measurement_minimum_dt: 0.05  # Sets the minimum time in seconds between two pose measurements.
