--- a/msf_updates/position.yaml
+++ b/msf_updates/position.yaml
@@ -1,19 +1,11 @@
-scale_init: 1
-data_playback: true
+core_init_filter: true
 
-core/core_fixed_bias: 0
+position_noise_meas: 0.01
 
-#########IMU PARAMETERS#######
-####### bluebird
-####### ADIS
-#core/core_noise_acc: 0.002
-#core/core_noise_accbias: 8e-5
-#core/core_noise_gyr: 0.0004
-#core/core_noise_gyrbias: 3e-6
+position_yaw_init: 0
 
-position_sensor/position_fixed_ppi: true
+position_delay: 0.02
 
-#init position offset prism imu
-position_sensor/init/p_ip/x: 0.02    
-position_sensor/init/p_ip/y: -0.05
-position_sensor/position_measurement_world_sensor: true  # selects if sensor measures its position w.r.t. world (true, e.g. Vicon) or the position of the world coordinate system w.r.t. the sensor (false, e.g. ethzasl_ptam)
+position_noise_p_ip: 0.0
+
+position_fixed_p_ip: False
